fixed travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,9 @@
 language: csharp
-solution: "./test.sln"
+solution: test.sln
+
+matrix:
+  include:
+    - dotnet: 2.1.502
+      mono: none
+      script:
+       - dotnet build test
